; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/winetest/extr_gui.c_MBdefault.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/winetest/extr_gui.c_MBdefault.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MBdefault.matrix = internal constant [6 x [4 x i32]] [[4 x i32] [i32 130, i32 0, i32 0, i32 0], [4 x i32] [i32 130, i32 133, i32 0, i32 0], [4 x i32] [i32 134, i32 129, i32 132, i32 0], [4 x i32] [i32 128, i32 131, i32 133, i32 0], [4 x i32] [i32 128, i32 131, i32 0, i32 0], [4 x i32] [i32 129, i32 133, i32 0, i32 0]], align 16
@MB_TYPEMASK = common dso_local global i32 0, align 4
@MB_DEFMASK = common dso_local global i32 0, align 4
@MB_DEFBUTTON2 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @MBdefault to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @MBdefault(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %5 = load i32, i32* %2, align 4
  %6 = load i32, i32* @MB_TYPEMASK, align 4
  %7 = and i32 %5, %6
  store i32 %7, i32* %3, align 4
  %8 = load i32, i32* %2, align 4
  %9 = load i32, i32* @MB_DEFMASK, align 4
  %10 = and i32 %8, %9
  %11 = load i32, i32* @MB_DEFBUTTON2, align 4
  %12 = sdiv i32 %10, %11
  store i32 %12, i32* %4, align 4
  %13 = load i32, i32* %3, align 4
  %14 = sext i32 %13 to i64
  %15 = getelementptr inbounds [6 x [4 x i32]], [6 x [4 x i32]]* @MBdefault.matrix, i64 0, i64 %14
  %16 = load i32, i32* %4, align 4
  %17 = sext i32 %16 to i64
  %18 = getelementptr inbounds [4 x i32], [4 x i32]* %15, i64 0, i64 %17
  %19 = load i32, i32* %18, align 4
  ret i32 %19
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
